--- a/index.html
+++ b/index.html
@@ -29,38 +29,38 @@
           </ul>
         </nav>
       </header>
-      <div class="contenedor">
-        <h1 class="titulo">Guitarras <span>invie</span>sibles</h1><!-- titulo -->
-        <h3 class="title-a">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
-        <a class="button" href="#guitarras">Conoce mas</a><!-- boton -->
+      <div class="InviHero-copy u-wrapper">
+        <h1 class="InvieHero-copy-title">Guitarras <span>invie</span>sibles</h1><!-- titulo -->
+        <h3 class="InvieHero-copy-subtitle">Sé la estrella de rock que siempre quisiste ser</h3><!-- resumen -->
+        <a class="InvieHero-copy-btn" href="#guitarras">Conoce mas</a><!-- boton -->
       </div>
     </section>
-    <section id="guitarras" class="guitarras contenedor"> <!-- guitarras -->
-      <h2>Nuestra guitarras</h2><!-- titulo -->
-      <div class="video-demo-contenedor">
+    <section id="InvieGuitars u-wrappers" class="guitarras contenedor"> <!-- guitarras -->
+      <h2 class="InveGuitars-title">Nuestra guitarras</h2><!-- titulo -->
+      <!--<div class="video-demo-contenedor">
         <div class="video-demo">
           <div class="video-responsive-contenedor">
             <iframe class="video-responsive-src" width="560" height="315" src="https://www.youtube.com/embed/R1dW8M4EqYY" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
-      </div>
+      </div>-->
       <!-- <video src="video/320x240.ogg"></video> -->
-      <article class="guitarra"> <!-- guitarra 1 -->
-        <img class="derecha" data-src="images/invie-acustica.png|images/invie-acustica2x.png"  alt="Guitarra Invie Acustica" width="350"/>
-        <div class="contenedor-guitarra-a">
-          <h3 class="title-b">Invie Acustica</h3>
-          <ol>
+      <article class="InvieGuitars-item"> <!-- guitarra 1 -->
+        <img class="InvieGuitars-item-img" data-src="images/invie-acustica.png|images/invie-acustica2x.png"  alt="Guitarra Invie Acustica" width="350"/>
+        <div class="InvieGuitars-item-container">
+          <h3 class="InvieGuitars-item-title">Invie Acustica</h3>
+          <ol class="InvieGuitars-item-list">
             <li>Estilo vintage</li>
             <li>Madera pura</li>
             <li>Incluye estuche invisible de aluminio</li>
           </ol>
         </div>
       </article>
-      <article class="guitarra b"> <!-- guitarra 2 -->
-        <img class="izquierda" data-src="images/invie-classic.png|images/invie-classic2x.png" alt="Guitarra Invie Classic" width="350"/>
-        <div class="contenedor-guitarra-b">
-          <h3 class="title-b">Invie Classic</h3>
-          <ol>
+      <article class="InvieGuitars-item"> <!-- guitarra 2 -->
+        <img class="InvieGuitars-item-img" data-src="images/invie-classic.png|images/invie-classic2x.png" alt="Guitarra Invie Classic" width="350"/>
+        <div class="InvieGuitars-item-container">
+          <h3 class="InvieGuitars-item-title">Invie Classic</h3>
+          <ol class="InvieGuitars-item-list">
             <li>Estilo vintage</li>
             <li>Liviana</li>
             <li>Inicia tu camino como Rockstar</li>
@@ -68,8 +68,8 @@
         </div>
       </article>
     </section>
-    <footer class="footer">
-      <div class="contenedor">
+    <footer class="InvieFooter">
+      <div class="InvieFooter-container u-wrapper">
         <div class="contacto">
           <img data-src="images/invie-white.png|images/invie-white2x.png" alt="logotipo blanco"/>
           <a href="tel:+573024456678"><strong>Telefono</strong> <span>3024456678</span></a>
