--- a/index.html
+++ b/index.html
@@ -70,44 +70,44 @@
     </section>
     <footer class="InvieFooter">
       <div class="InvieFooter-container u-wrapper">
-        <div class="contacto">
-          <img data-src="images/invie-white.png|images/invie-white2x.png" alt="logotipo blanco"/>
-          <a href="tel:+573024456678"><strong>Telefono</strong> <span>3024456678</span></a>
-          <a href="mailto:contacto@invie.com"><strong>E-mail</strong> <span>contacto@invie.com</span></a>
+        <div class="InvieFooter-contact">
+          <img class="InvieFooter-logo" data-src="images/invie-white.png|images/invie-white2x.png" alt="logotipo blanco"/>
+          <a class="InvieFooter-link" href="tel:+573024456678"><strong>Telefono</strong> <span>3024456678</span></a>
+          <a class="InvieFooter-link" href="mailto:contacto@invie.com"><strong>E-mail</strong> <span>contacto@invie.com</span></a>
         </div>
-        <form class="formulario">
-          <div class="col1">
-            <label for="nombre">Nombre</label>
-            <input type="text" required id="nombre" name="nombre"/>
-            <label for="email">E-mail</label>
-            <input type="email" required id="email" name="email"/>
+        <form class="InvieFooter-form">
+          <div class="InvieFooter-form-column">
+            <label class="InvieFooter-form-label" for="nombre">Nombre</label>
+            <input class="InvieFooter-form-input InvieFooter-form-input--text" type="text" required id="nombre" name="nombre"/>
+            <label class="InvieFooter-form-label" for="email">E-mail</label>
+            <input  class="InvieFooter-form-input InvieFooter-form-input--text" type="email" required id="email" name="email"/>
             <div class="sexo">
-              <label for="mujer">
-                <input type="radio" id="mujer" checked name="sexo" value="mujer"> mujer
+              <label class="InvieFooter-label" for="mujer">
+                <input class="InvieFooter-form-input InvieFooter-form-input--radio" type="radio" id="mujer" checked name="sexo" value="mujer"> mujer
               </label>
-              <label for="hombre">
-                <input type="radio" id="hombre" name="sexo" value="hombre"> hombre
+              <label class="InvieFooter-label" for="hombre">
+                <input class="InvieFooter-form-input InvieFooter-form-input--radio" type="radio" id="hombre" name="sexo" value="hombre"> hombre
               </label>
             </div>
             <div class="intereses">
-              <label for="cotizacion">
-                <input type="checkbox" checked id="cotizacion" name="intereses" value="cotizacion"> Cotización
+              <label class="InvieFooter-label" for="cotizacion">
+                <input class="InvieFooter-form-input InvieFooter-form-input--check" type="checkbox" checked id="cotizacion" name="intereses" value="cotizacion"> Cotización
               </label>
-              <label for="reclamos">
-                <input type="checkbox" id="reclamos" name="intereses" value="reclamos"> Reclamos
+              <label class="InvieFooter-label" for="reclamos">
+                <inputclass="InvieFooter-form-input InvieFooter-form-input--check" type="checkbox" id="reclamos" name="intereses" value="reclamos"> Reclamos
               </label>
-              <label for="comentarios">
-                <input type="checkbox" id="comentarios" name="intereses" value="comantarios"> Comentarios
+              <label class="InvieFooter-label" for="comentarios">
+                <input class="InvieFooter-form-input InvieFooter-form-input--check" type="checkbox" id="comentarios" name="intereses" value="comantarios"> Comentarios
               </label>
-              <label for="otros">
-                <input type="checkbox" id="otros" name="intereses" value="otros"> Otros
+              <labelclass="InvieFooter-label" for="otros">
+                <input class="InvieFooter-form-input InvieFooter-form-input--check" type="checkbox" id="otros" name="intereses" value="otros"> Otros
               </label>
             </div>
           </div>
-          <div class="col2">
-            <label for="comentarios">Comentarios</label>
-            <textarea name="comantarios" id="comentarios" cols="30" rows="7"></textarea>
-            <input type="submit" value="Enviar" class="button"/>
+          <div class="InvieFooter-form-column">
+            <label class="InvieFooter-label" for="comentarios">Comentarios</label>
+            <textarea class="InvieFooter- InvieFooter-form-input--area" name="comantarios" id="comentarios" cols="30" rows="7"></textarea>
+            <input class="InvieFooter-form-btn" type="submit" value="Enviar" class="button"/>
           </div>
         </form>
       </div>
